fix: image carousel alignment

--- a/src/Component/Details/details.css
+++ b/src/Component/Details/details.css
@@ -56,6 +56,7 @@
     margin-top: 3%;
     border-radius:15px;
     border:solid 1px turquoise;
+    margin-bottom:10px;
 }
 
 
@@ -185,6 +186,8 @@
         margin-left: 3%;
         margin-top: 3%;
         border-radius:15px;
+        height:400px;
+        width:400px;
         border:solid 1px turquoise;
     }
 
